# Agreed

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
dev/: Containerfile
include/: TCPClient.h  TCPServer.h  sender.h
src/: TCPClient.cpp  TCPServer.cpp  chatwindow.cpp  chatwindow.h  client.cpp  contactswindow.cpp  contactswindow.h  gui.cpp  main.cpp  mainwindow.cpp  mainwindow.h  sender.cpp
test/: test.cpp
